<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.b2c.audience.MeansPaymentActivity" />
    </data>


<LinearLayout

    android:id="@+id/layoutMain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_medium"
                android:text="@string/mean_payment"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/add_cb"
            android:fontFamily="@font/helvetica_neue_medium"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtcbdetails"
            android:fontFamily="@font/helvetica_neue_light"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr_no"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:textSize="12sp"
            android:textColor="#66FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:background="@drawable/card_bg">

            <EditText
                android:id="@+id/etCardNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/cr_no_digit"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:layout_weight="1"
                android:textColorHint="@color/edit_hint_two"
                android:textColor="@color/white"
                android:maxLines="1"
                android:background="@null"
                android:textSize="22sp"
                android:maxLength="19"
                android:imeOptions="actionDone"
                android:inputType="phone"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/ivCardScan"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/camera_credit"
                android:contentDescription="@string/app_name" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_date"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:textSize="12sp"
                    android:textColor="#66FFFFFF"/>

                <EditText
                    android:id="@+id/etExpDat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/exp_date_digit"
                    android:paddingStart="12dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:background="@drawable/card_bg"
                    android:paddingEnd="12dp"
                    android:maxLines="1"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:textSize="22sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLength="7"
                    android:textColorHint="@color/edit_hint_two"
                    android:textColor="@color/white"
                    android:lines="1"
                    android:layout_marginTop="10dp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight=".4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cvvno"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:textSize="12sp"
                    android:textColor="#66FFFFFF"/>

                <EditText
                    android:id="@+id/etCvv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/cvv_digit"
                    android:paddingStart="12dp"
                    android:gravity="center"
                    android:paddingEnd="12dp"
                    android:textColorHint="@color/edit_hint_two"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="number"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:textSize="22sp"
                    android:maxLength="3"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/card_bg"
                    tools:ignore="Autofill" />

            </LinearLayout>


        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_bg_white"
            android:onClick="onClick"
            android:fontFamily="@font/helvetica_neue_medium"
            android:textAllCaps="false"
            android:text="@string/register_cb"
            android:textColor="#A40004"
            android:textSize="@dimen/dimen_16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:textColor="#5CFFFFFF"
            android:textSize="@dimen/dimen_10sp"
            android:fontFamily="@font/helvetica_neue_medium" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="58dp"
            android:layout_height="28dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/stripe_opacity"
            android:tint="@color/white"
            android:contentDescription="@string/app_name" />

    </LinearLayout>




</LinearLayout>



</layout>