<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.b2c.audience.NavigationItemActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="80dp"
                android:elevation="50dp"
                android:shadowColor="#000000"
                android:shadowRadius="5"
                android:src="@drawable/profile"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/helvetica_neue_medium"
                android:text="@string/user_name"
                android:textColor="#000000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/txtUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:text="@string/user_email"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtYourBill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:background="?selectableItemBackground"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:onClick="onClick"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="8dp"
                        android:text="@string/Your_tickets"
                        android:textColor="#3D3D3D"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtPayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:onClick="onClick"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="8dp"
                        android:text="@string/payment"
                        android:textColor="#3D3D3D"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtTransction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:onClick="onClick"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="8dp"
                        android:text="@string/your_transction"
                        android:textColor="#3D3D3D"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtCamera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:onClick="onClick"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="8dp"
                        android:text="@string/navi_camera"
                        android:textColor="#3D3D3D"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:onClick="onClick"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="8dp"
                        android:text="@string/setting"
                        android:textColor="#3D3D3D"
                        android:textSize="20sp" />

                </LinearLayout>

            </ScrollView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/helvetica_neue_regular"
                android:text="@string/navi_contant"
                android:textColor="#C0C0C0"
                android:textSize="@dimen/dimen_10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/helvetica_neue_regular"
                android:text="@string/navi_contant_two"
                android:textColor="#C0C0C0"
                android:textSize="@dimen/dimen_10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/helvetica_neue_regular"
                android:text="@string/navi_contant_three"
                android:textColor="#9D9D9D"
                android:textSize="@dimen/dimen_10sp" />

        </LinearLayout>

    </LinearLayout>

</layout>